JEDIT 4.0 VERSION HISTORY

* Version 4.0pre3

+ New Features

- Two-stage save (where a file is first saved to #filename#save#, then
  renamed to the actual file name) can be disabled in the 'Loading and
  Saving' option pane
- View->Folding->Add Explicit Fold (shortcut: C+e a) command added;
  surrounds selection with {{{ and }}}
- -noplugins command line switch added

+ Enhancements

- C+LEFT/C+RIGHT are now more intelligent. Tell me if you like the new
  behavior.
- If there are more buttons in a docking area than can fit, a popup menu
  button is shown; clicking it shows a popup listing all dockables in
  that area
- Added option to disable file system browser's tool bar
- I/O errors are now batched into a single dialog box

+ Neutral

- Syntax highlighting can no longer be disabled

+ Bug Fixes

- JEditTextArea now uses type-safe buffer property accessors, so there
  shouldn't be any more ClassCastExceptions
- Fixed stack overflow if attempting to use URL filesystem (to open an
  http:// URL, for instance)
- Fixed stupid bug in installer that affected MacOS X installation
- File system browser's parent directory view could not be completely
  hidden by dragging the split pane
- Pressing the left arrow key in the file system browser didn't always
  work
- Bracket matching would sometimes show a status bar message even if the
  bracket was visible
- Fixed another minor bracket repaint problem that would occur if the
  matched bracket was not visible and the text area lost focus
- Select Line, Select Word, Select Paragraph actions were slightly
  broken
- Fixed minor undo modified flag clearing bug
- Pressing the tab key with a one-line selection would insert a hard tab
  even if soft tabs were enabled

+ API Changes

- VFS.reloadDirectory() method added; it is called before a directory is
  reloaded by the file system browser
- MiscUtilities.charsToXMLEscapes() method added
- To take advantage of the new I/O error dialog box, virtual filesystem